2005-03-19  Miguel Guzman (Aglanor)

	* added name of speaking entity to chat widget line.

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* removed references to non-existant meshes

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added more comments

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added Name accessor to BluePrint, now all blueprint must have names
	* changed the way the bounding boxes are defined in the blockspec's, now you define the complete dimension of the bounding box (just easier to imagine it that way)
	* various fixes to Jesus, started on methods for loading a lot of BluePrints and keeping them in memory
	* fixes and clean ups for JesusEdit

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added and cleaned up comments

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added comments, removed old code
	* send string by reference

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* removed dependeny on GUIManager

2005-03-18  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ability to save blueprints to xml files.

2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>

	* make sure the Bind button is disabled by default

2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>

	* added modeldef's for buildingblocks

2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>

	* AvatarEmberEntity.h: better looking comments
	* TerrainGenerator.cpp: cast double to int

2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>

	* Enabled fall back techniques for the terrain material for GFX cards without shader support.

2005-03-16  Erik Hjortsberg  <erik@katastrof.nu>

	* Added kdevelop project file.

2005-03-16  Erik Hjortsberg  <erik@katastrof.nu>

	* Jesus.h, Jesus.cpp: added constructors for clean deletion of Jesus objects
	* JesusEdit: added slider to the preview window for zooming in and out on the building block
		added ability to see selected AttachPoints in the preview window

2005-03-15  Erik Hjortsberg  <erik@katastrof.nu>
